sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: '(' expected but '{' found.
	if { 
           ^AlgBubbleSort1:6: error: illegal start of simple expression
}
^